# RK2

./: CMakeLists.txt  CPack.cmake
.github/workflows/: CI.yml  CI_release.yml
src/: CMakeLists.txt  main.cpp  program_main.cpp
tests/: tests.cpp
